# Raytracing_in_a_weekend_rust

./: .gitignore  Cargo.toml  README.md  build.sh  flake.nix  ppm2png
src/: color.rs  hittable.rs  main.rs  point3.rs  ray.rs  shapes.rs  vec3.rs
src/application/: mod.rs
src/raytracing/: camera.rs  color.rs  hittable.rs  materials.rs  mod.rs  ray.rs  render_pool.rs
src/raytracing/shapes/: sphere.rs
src/space/: mod.rs  point3.rs  vec3.rs
src/util/: interval.rs  mod.rs  progress.rs  random.rs  thread_pool.rs
