[package]
name = "raytracing_in_a_weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# codegen-units = 1
# lto = "fat"
# opt-level = "z"
# strip = "debuginfo"
# panic = "abort"

[dependencies]
pixels = "0.13.0"
terminal_size = "0.3.0"
winit = { version = "0.29.10" , features = ["rwh_05"]}
